# MagicBotTestFramework

./: .gitignore  README.md  constants.py  dimensions.py  pyproject.toml  robot.py
.github/workflows/: run-robot.yml
autonomous/: README.md  __init__.py  just_leave.py
components/: __init__.py  can_ids.py  controllers.py  shooter.py  swerve.py
